# tts_podcast

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  bun.lockb  cleanup.py  cleanup_experiment.py  extract_article.py  extract_article.ts  gemma3.txt  gemma3_1b-it-qat.txt  html_fetcher.py  llama3.2.txt  llm_dialogue.py  llm_preprocess.py  package.json  podcast.py  preprocess.py  pyproject.toml  tts.py
.github/workflows/: ci.yml
models/: base.py  dia_tts.py  eleven.py  kokoro.py
tests/: __init__.py  economy.html  test_cleanup_prompt.py  test_extract_article.py  test_preprocess.py  test_tts.py
