[project]
name = "tts-podcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.16",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "kokoro>=0.9.4",
    "num2words>=0.5.14",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.10",
    "pytz>=2025.1",
    "soundfile>=0.13.1",
    "transformers>=4.48.3",
    "ruff>=0.9.7",
    "elevenlabs>=1.51.0",
    "anthropic>=0.40.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz",
    "spacy>=3.8.0",
]

[tool.ruff]
line-length = 120
